# hexagonal-architecture-django

./: .editorconfig  .envrc  .flake8  .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  renovate.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  static-analysis.yml
hexarch_project/hexarch_project/: asgi.py  settings.py  urls.py  wsgi.py
hexarch_project/myapp/: apps.py  views.py
src/: manage.py
src/api_specification/: public_api.yaml
src/hexarch_project/: asgi.py  settings.py  test_settings.py  urls.py
src/myapp/: __init__.py  apps.py  dependencies_container.py  hexagonal_configuration.py  models.py  urls.py
src/myapp/application/domain/model/: article_vote.py  (+7 more)
src/myapp/application/service/: article_rating_service.py  post_rating_service.py
src/myapp/application/util/: assert_never.py  transactional.py
src/myapp/configuration/: json_renderer.py
src/myapp/eventlib/: event.py  event_dispatcher.py
src/myapp/migrations/: 0001_initial.py  0002_populate_demo_user_and_article_data.py
tests/myapp/application/: test_hexagonal_configuration.py  test_smoke.py
tests/myapp/application/service/: test_post_rating_service.py
tests/test_myapp/: make_requests.py  test_dependencies_container.py  test_requests.py
tests/test_myapp/application/: conftest.py  test_api.py  test_hexagonal_configuration.py
tests/test_myapp/application/service/: test_article_rating_service.py  test_post_rating_service.py
tests/test_myapp/eventlib/: conftest.py  intercepting_event_dispatcher.py  test_event_dispatcher.py
(+88 files in other folders)
