[tool.poetry]
name = "hexagonal-architecture-django"
version = "0.0.0"
description = "Experiments with Django and Hexagonal Architecture"

license = "MIT"

authors = [
    "Zaur Nasibov <comments@znasibov.info>"
]

readme = 'README.rst'

repository = "https://github.com/BasicWolf/hexagonal-architecture-django"
homepage = "https://github.com/BasicWolf/hexagonal-architecture-django"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
django-stubs="*"
flake8 = "*"
mypy = "^0.790"
pudb = "*"
pytest = "*"
pytest-django = "^4.1.0"
pytest-mock = "*"
pytest-pudb = "*"
factory-boy = "^3.1.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "hexarch_project.settings"
testpaths = ["tests"]
python_files = ["test_*.py"]

