[tool.poetry]
name = "hexagonal-architecture-django"
version = "0.0.0"
description = "Experiments with Django and Hexagonal Architecture"

license = "MIT"

authors = [
    "Zaur Nasibov <comments@znasibov.info>"
]

readme = 'README.rst'

repository = "https://github.com/BasicWolf/hexagonal-architecture-django"
homepage = "https://github.com/BasicWolf/hexagonal-architecture-django"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "hexarch_project.settings"
testpaths = ["tests"]
python_files = ["test_*.py"]

